<resources>
    <string name="app_name">Calculator</string>
    <string name="raise_to">^</string>
    <string name="ac">AC</string>
    <string name="divide">/</string>
    <string name="doc_string">.</string>
    <string name="ans">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication_string">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="calculator_app">Calculator App</string>
</resources>