<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="6"
    android:background="@color/black"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/answer_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allclearbtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/ac"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/backBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/btn_bg"
            android:text="@string/back"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/divisionBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_circular"
            android:text="@string/divide"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/eightBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/nineBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_9"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/multiplicationBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_circular"
            android:text="@string/multiplication_string"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/fiveBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/sixBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_6"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/subtractBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_circular"
            android:text="@string/subtraction"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/twoBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/threeBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_3"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/additionBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_circular"
            android:text="@string/addition"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zeroBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/answerBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/btn_bg"
            android:text="@string/ans"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/dotBtn"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_circular"
            android:text="@string/doc_string"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>